ref #1337 - Discontinue linking files for each unit during node publish.

--- a/nodes/parent/etc/httpd/conf.d/pulp_nodes.conf
+++ b/nodes/parent/etc/httpd/conf.d/pulp_nodes.conf
@@ -33,3 +33,14 @@ Alias /pulp/nodes/https/repos /var/www/pulp/nodes/https/repos
   SSLOptions +FakeBasicAuth
   SSLRequire %{SSL_CLIENT_S_DN_O} eq "PULP" and %{SSL_CLIENT_S_DN_OU} eq "NODES"
 </Directory>
+
+Alias /pulp/nodes/content /var/www/pulp/nodes/content
+
+<Directory /var/www/pulp/nodes/content >
+  Options FollowSymLinks Indexes
+  SSLRequireSSL
+  SSLVerifyClient require
+  SSLVerifyDepth  5
+  SSLOptions +FakeBasicAuth
+  SSLRequire %{SSL_CLIENT_S_DN_O} eq "PULP" and %{SSL_CLIENT_S_DN_OU} eq "NODES"
+</Directory>
