vagrant user is allowed to read the journal without sudo privs

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -69,6 +69,13 @@
       - tito
       - yum-utils
 
+- name: allow vagrant user to read the systemd journal
+  user:
+      name: vagrant
+      state: present
+      groups: systemd-journal
+      append: true
+
 - copy: src=bashrc dest=/home/{{ ansible_env.SUDO_USER }}/.bashrc
 - copy: src=drop_database.js dest=/home/{{ ansible_env.SUDO_USER }}/drop_database.js
 - copy: src=motd dest=/etc/motd
