--- a/playpen/ansible/roles/core/tasks/main.yml
+++ b/playpen/ansible/roles/core/tasks/main.yml
@@ -1,9 +1,14 @@
 ---
-- name: Gathering Pulp facts
-  pulp_facts:
-
-- name: Install packages
+- name: Install basic packages
   dnf: name={{ item }} state=present
   with_items:
       - bash-completion
       - vim-enhanced
+
+- name: Install packages requires to gather Pulp facts
+  dnf: name={{ item }} state=present
+  with_items:
+      - rpm-build
+
+- name: Gathering Pulp facts
+  pulp_facts:
