--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -76,6 +76,10 @@
       groups: systemd-journal
       append: true
 
+- name: Install Pulp RPM dependencies
+  dnf: name={{ item }} state=present
+  with_items: "{{ pulp_rpm_dependencies }}"
+
 - copy: src=bashrc dest=/home/{{ ansible_env.SUDO_USER }}/.bashrc
 - copy: src=drop_database.js dest=/home/{{ ansible_env.SUDO_USER }}/drop_database.js
 - copy: src=motd dest=/etc/motd
