Update the lazy-content branch based on the PR review.
This commit addresses some of the issues brought up during the
lazy-content branch review. Others have been fixed in a separate PR,
while some have been written as tasks for the future.

--- a/server/etc/httpd/conf.d/pulp_content.conf
+++ b/server/etc/httpd/conf.d/pulp_content.conf
@@ -19,4 +19,5 @@ WSGIImportScript /srv/pulp/content.wsgi process-group=pulp-content application-g
 <Location /pulp/content/>
     XSendFile on
     XSendFilePath /var/lib/pulp/content
+    XSendFilePath /var/lib/pulp/published
 </Location>
