--- a/streamer/etc/httpd/conf.d/pulp_streamer.conf
+++ b/streamer/etc/httpd/conf.d/pulp_streamer.conf
@@ -13,6 +13,18 @@ Alias /streamer /var/www/streamer
     # Remove the 'policy' and 'signature' query parameter if it is present in 
     # the request. Without this Squid receives a different URL for each request
     # and we aren't able to make use of Squid's caching.
+    #
+    # Each block checks for the existence of a key in the query string and, if
+    # present, rewrites the URL to remove the key and its value. It begins by
+    # attempting to find the string 'policy=' that is is directly after a '&'
+    # or ';', unless it starts the query string. Both '&' and ';' are valid
+    # separators in a query string. Next, it matches everything after the
+    # 'policy=' until it encounters another '&' or ';', or if the end of the
+    # string is reached. Finally, the string is rewritten with the 'policy='
+    # plus everything after it to the '&', ';', or end of string removed.
+    #
+    # For more information, see the mod_rewrite on syntax, see the mod_rewrite
+    # documentation.
     RewriteCond %{QUERY_STRING}  (.*)(?:^|&|;)policy=(?:[^(&|;)]*)((?:&|;|$).*)
     RewriteCond %1%2 (^|&|;)([^(&|;)].*|$)
     RewriteRule ^(.*)$ $1?%2 [DPI]
