--- a/streamer/etc/pulp/streamer.conf
+++ b/streamer/etc/pulp/streamer.conf
@@ -9,8 +9,9 @@
 #     This should match the port that Squid is configured to forward to.
 #
 # interfaces: comma-separated list; the interfaces that the Pulp Streamer
-#     listens on. These should be either host names or IP addresses. The
-#     Pulp Streamer defaults to listening on the 'localhost' interface.
+#     listens on. Note that these are *not* network interfaces. These
+#     should be either host names or IP addresses. The Pulp Streamer
+#     defaults to listening on 'localhost'.
 #
 # cache_timeout: integer; the length of time in seconds that the lazy
 #     loader should cache content for in seconds. The Pulp Streamer
