Ansible dev role now RPM installs httpie

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -44,6 +44,7 @@
       - iotop
       - jnettop
       - koji
+      - httpie
       - python-django-bash-completion
       - python-gofer-qpid
       - python-ipdb
