Move contents of /srv/pulp to /usr/share/pulp/srv.
It is an error for an RPM package to install content into /srv as
this path is reserved for the local administrator.

https://pulp.plan.io/issues/1496

fixes #1496

--- a/server/etc/httpd/conf.d/pulp_apache_22.conf
+++ b/server/etc/httpd/conf.d/pulp_apache_22.conf
@@ -32,8 +32,8 @@ WSGIDaemonProcess pulp user=apache group=apache processes=3 display-name=%{GROUP
 #WSGIRestrictStdout Off
 
 WSGISocketPrefix run/wsgi
-WSGIScriptAlias /pulp/api /srv/pulp/webservices.wsgi
-WSGIImportScript /srv/pulp/webservices.wsgi process-group=pulp application-group=pulp
+WSGIScriptAlias /pulp/api /usr/share/pulp/wsgi/webservices.wsgi
+WSGIImportScript /usr/share/pulp/wsgi/webservices.wsgi process-group=pulp application-group=pulp
 
 <Files webservices.wsgi>
     WSGIPassAuthorization On
