--- a/server/etc/httpd/conf.d/pulp_content.conf
+++ b/server/etc/httpd/conf.d/pulp_content.conf
@@ -2,9 +2,9 @@
 WSGISocketPrefix run/wsgi
 WSGIProcessGroup pulp-content
 WSGIApplicationGroup pulp-content
-WSGIScriptAlias /pulp/content /srv/pulp/content.wsgi
+WSGIScriptAlias /pulp/content /usr/share/pulp/wsgi/content.wsgi
 WSGIDaemonProcess pulp-content user=apache group=apache processes=3 display-name=%{GROUP}
-WSGIImportScript /srv/pulp/content.wsgi process-group=pulp-content application-group=pulp-content
+WSGIImportScript /usr/share/pulp/wsgi/content.wsgi process-group=pulp-content application-group=pulp-content
 
 <Files content.wsgi>
     WSGIPassAuthorization On
