--- a/streamer/etc/httpd/conf.d/pulp_streamer.conf
+++ b/streamer/etc/httpd/conf.d/pulp_streamer.conf
@@ -6,10 +6,10 @@ Alias /streamer /var/www/streamer
 
 <Directory /var/www/streamer>
     # Enable URL signature checking
-    WSGIAccessScript /srv/pulp/streamer_auth.wsgi
-    
+    WSGIAccessScript /usr/share/pulp/wsgi/streamer_auth.wsgi
+
     RewriteEngine on
-   
+
     # Remove the 'policy' and 'signature' query parameter if it is present in 
     # the request. Without this Squid receives a different URL for each request
     # and we aren't able to make use of Squid's caching.
