--- a/streamer/usr/lib/systemd/system/pulp_streamer.service
+++ b/streamer/usr/lib/systemd/system/pulp_streamer.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 User=apache
-ExecStart=/usr/bin/twistd --nodaemon --syslog --prefix=pulp_streamer --pidfile= --python /srv/pulp/streamer.tac
+ExecStart=/usr/bin/twistd --nodaemon --syslog --prefix=pulp_streamer --pidfile= --python /usr/share/pulp/wsgi/streamer.tac
 
 [Install]
 WantedBy=multi-user.target
