Create a proxy worker that pools TCP connections.

--- a/streamer/etc/httpd/conf.d/pulp_streamer.conf
+++ b/streamer/etc/httpd/conf.d/pulp_streamer.conf
@@ -36,3 +36,7 @@ Alias /streamer /var/www/streamer
     # Proxy all requests on to the Squid server.
     RewriteRule (.*) http://127.0.0.1:3128/$1 [P]
 </Directory>
+
+<Proxy http://127.0.0.1:3128>
+  ProxySet connectiontimeout=60
+</Proxy>
