Add tree to the core role.

--- a/playpen/ansible/roles/core/tasks/main.yml
+++ b/playpen/ansible/roles/core/tasks/main.yml
@@ -5,6 +5,7 @@
       - bash-completion
       - screen
       - tmux
+      - tree
       - vim-enhanced
 
 - name: Install packages requires to gather Pulp facts
