Remove the `enabled` setting for lazy.
This setting didn't do anything beyond stopping the content WSGI
application from redirecting the client. If the lazy services haven't
been setup, the client will receive a HTTP 503 or HTTP 404.

closes #1649

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -356,17 +356,18 @@
 #
 # Settings for lazy content loading.
 #
-# enabled:
-#   This controls whether redirect is enabled
-#
 # redirect_host:
-#   The host FQDN or IP to which requests are redirected.
+#   The host FQDN or IP to which requests are redirected. Defaults to
+#   the local host's fully qualified domain name.
 #
 # redirect_port:
-#   The TCP port to which requests are redirected
+#   The TCP port to which requests are redirected. By default no port
+#   is stated explicitly so an HTTP redirect will use port 80 and an
+#   HTTPS redirect will use port 443. The protocol used will match the
+#   protocol the client used for the initial request.
 #
 # redirect_path:
-#   The base path to which requests are redirected
+#   The base path to which requests are redirected. Defaults to /streamer/
 #
 # https_retrieval:
 #   boolean; controls whether Pulp uses HTTPS or HTTP to
@@ -387,7 +388,6 @@
 #   downloading content from the Squid cache.
 
 [lazy]
-# enabled: false
 # redirect_host:
 # redirect_port:
 # redirect_path:
