--- a/playpen/ansible/roles/core/tasks/main.yml
+++ b/playpen/ansible/roles/core/tasks/main.yml
@@ -3,6 +3,7 @@
   dnf: name={{ item }} state=present
   with_items:
       - bash-completion
+      - htop
       - screen
       - tmux
       - tree
