address new deprecation warnings seen in ansible2
Specifically, replace the refs to "sudo:" with "become:",
and explicitly configure it as described in the docs for that
mechanism: https://docs.ansible.com/ansible/become.html

--- a/playpen/ansible/vagrant-playbook.yml
+++ b/playpen/ansible/vagrant-playbook.yml
@@ -1,12 +1,14 @@
 ---
 - hosts: all
-  sudo: true
+  become: true
+  become_method: sudo
   vars:
   roles:
     - core
 
 - hosts: dev
-  sudo: true
+  become: true
+  become_method: sudo
   vars:
   roles:
     - db
