Adds plantuml to ansible dev role so that docs can be built

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -45,6 +45,7 @@
       - jnettop
       - koji
       - httpie
+      - plantuml
       - python-django-bash-completion
       - python-gofer-qpid
       - python-ipdb
